--- a/index.html
+++ b/index.html
@@ -1,22 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta name="Author" content="MLopez" />
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Index</title>
-        <link href="css/estilos.css" rel="stylesheet" type="text/css" />
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"/>
-    </head>
-    <body>
+<head>
+    <meta name="Author" content="MLopez" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Index</title>
+    <link href="css/estilos.css" rel="stylesheet" type="text/css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"/>
+</head>
+<body>
+    <div class="container">
+
+        <nav style="padding-left: 15%;" class="navbar navbar-expand-lg bg-white">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                <img src="imagenes/logo.png" width="150" height="80" alt="No Encontrado" />
+            </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link text-center" href="#"><h5>Teatro Regional</h5></a>
+                    <a class="nav-link text-center" href="#"><h5>Centros Culturales</h5></a>
+                    <a class="nav-link text-center" href="#"><h5>Contacto</h5></a>
+                    <a class="nav-link text-center" href="#"><h5>Buzon de sugerencias</h5></a>
+                </div>
+
+                <a class="nav-link text-center text-primary" href="#">
+                    <h1><i class="bi bi-patch-exclamation-fill"></i></h1>
+                </a>
+
+                </div>
+            </div>
+            </nav>
+
+    </div>
+
+
+    <main>
         <div></div>
-
-
-        <main>
-            <div></div>
-            <div></div>
-            <div></div>
-        </main>
+        <div></div>
+        <div></div>
+    </main>
 
 
         <div></div>
