--- a/index.html
+++ b/index.html
@@ -78,7 +78,48 @@
 
 
 
-        <div></div>
+        <div class="container mt-3"      style="font-size: 20;   text-align:justify">
+            <div class="row row-cols-1 row-cols-md-2 g-4">
+                <div class="col">
+                  <div class="card">
+                    <img src="imagenes/obra1.jpeg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">La Patriota</h5>
+                      <p class="card-text">En una sociedad regida por el patriarcado, la obra se abandera por la historiografía no tradicional que ubica a Javiera Carrera como la principal impulsora de las ideas emancipadoras de los Carrera.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card">
+                    <img src="imagenes/obra2.jpeg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Gala Lirica Sueños de Opera</h5>
+                      <p class="card-text">Ven a este espectáculo, donde escucharemos a cuatro destacadas voces nacionales: la soprano Carolina García-Valentín, la mezzosoprano Evelyn Ramírez, el tenor Pedro Espinoza y el bajo-barítono Homero Pérez-Miranda.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card">
+                    <img src="imagenes/obra3.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Ojos Que No Ven</h5>
+                      <p class="card-text">Cuando una familia celebra unida, permanece unida. Pero hay que seguir ciertas reglas: no se puede hablar de ciertos temas, hay que mirar hacia otro lado cuando algo te duele, esquivar los cuchillos y sonreír, nada de política.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card">
+                    <img src="imagenes/obra4.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Clausula Del amor
+                      </h5>
+                      <p class="card-text">¿Qué sucede cuando inesperadamente, uno de los involucrados en una relación amorosa de años, con hijos, recuerdos imborrables, con una vida sexual viva y grata, decide, de un día para otro poner fin a la relación?</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+        </div>
 
 
 
@@ -86,7 +127,20 @@
     </main>
 
 
-        <div></div>
+    <div class="container bg-danger">
+        <footer class="py-3 my-4">
+          <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+            <li class="nav-item"><a href="#" class=" text-white nav-link px-2 ">Home</a></li>
+            <li class="nav-item"><a href="#" class="text-white nav-link px-2 ">Features</a></li>
+            <li class="nav-item"><a href="#" class="text-white nav-link px-2 ">Pricing</a></li>
+            <li class="nav-item"><a href="#" class="text-white nav-link px-2 ">FAQs</a></li>
+            <li class="nav-item"><a href="#" class="text-white nav-link px-2 ">About</a></li>
+          </ul>
+          <p class="text-center text-white">&copy; 2024 Company, Inc</p>
+        </footer>
+      </div>
+
+
 
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
